# Music-Catalog

./: .gitignore  Makefile  README.md  accounts.csv  admin_account.html  config.py  createAccount.py  pyproject.toml  requirements.txt  run.py  setup_and_run.bat  song_catalog.csv
app/: __init__.py  models.py
app/routes/: admin.py  auth.py  home.py  user.py
app/static/css/: admin_home.css  auth.css  dashboard.css  home.css  main.css  songs.css  user_playlist.css
app/templates/: add_song.html  admin_account.html  admin_accounts.html  admin_dashboard.html  admin_home.html  base.html  change_password.html  create_playlist.html  delete_song.html  display_playlist.html  edit_song.html  home.html  login.html  reset_password.html  signup.html  user_account.html  user_dashboard.html
migrations/versions/: 260b78dcd1b4_add_is_public_to_playlist.py  5becc3c7c0b2_add_preview_url_back.py  63662c6f276f_add_online_source_to_song.py  91754e3a6ecc_add_preview_url_to_song.py  cd41a9387e01_.py  d800135c7435_.py  d952304796d0_add_is_blocked_to_user.py  dbe46c607ad6_add_email_to_user.py  ebc9b33a02db_merge_heads.py
tests/: test_admin.py  test_playlist.py  test_song.py  test_user.py
